--- a/src/main/resources/static/css/mypage/myWriteContent.css
+++ b/src/main/resources/static/css/mypage/myWriteContent.css
@@ -125,6 +125,10 @@ a {
 
 }
 
+.mypage-user-nickname{
+  margin-top: 4px;
+}
+
 .profile-name-option{
   margin-top: 6px;
 }
@@ -301,7 +305,7 @@ a {
     padding-top: 10px;
     padding-bottom: 10px;
     margin: 10px;
-    height: 100px;
+    height: 115px;
     background-color: rgb(248, 247, 247);
     display: flex;
   }
@@ -353,3 +357,67 @@ a {
   footer{
     height: 300px;
   }
+
+.hippo-celeb{
+  margin-top: 5px;
+  width: 28px;
+  height: 20px;
+}
+
+/* 카테고리 모달 창 */
+
+.category_popup {
+  position: fixed;
+  display: none;
+  left: 0;
+  right: 0;
+  top: 109px;
+  bottom: 0;
+  z-index: 10;
+  background: rgba(0, 0, 0, 0.3);
+}
+.category_popup_inner {
+  max-width: 1440px;
+  margin: 0 auto;
+}
+
+.category_popup_inner_layout {
+  overflow: hidden;
+  display: flex;
+  align-items: stretch;
+  max-width: 350px;
+  min-height: 500px;
+  max-height: 600px;
+  background-color: #fdffff;
+  border-radius: 20px 20px 20px 20px;
+  border: 2px solid #29a7a4;
+}
+
+.category_popup_content_layout {
+  right: 0;
+  left: 0;
+  position: sticky;
+  padding: 24px 24px 32px;
+  margin: 15px 25px;
+}
+
+.category_popup_title {
+  display: flex;
+  /*padding: 5px 0 15px;*/
+  font-weight: 700;
+  font-size: 15px;
+  color: #2bc1bf;
+}
+.category_popup_content {
+  display: flex;
+  margin: 10px 20px;
+  cursor: pointer;
+}
+
+.category_popup_content_box{
+  margin-bottom: 25px;
+}
+
+.main_content {
+  height: auto;
+}
