--- a/src/main/resources/templates/message/letterView.html
+++ b/src/main/resources/templates/message/letterView.html
@@ -6,6 +6,7 @@
     <title>Document</title>
     <link rel="stylesheet" th:href="@{/css/message/letterView.css}" />
     <link rel="stylesheet" th:href="@{/css/main/mainpage.css}" />
+    <script defer th:src="@{/js/main/mainpage.js}"></script>
     <script defer th:src="@{/js/message/letterView.js}"></script>
   </head>
   <body>
@@ -13,38 +14,48 @@
       <header class="header" th:replace="~{/fragment/header :: header}"></header>
 
       <main>
+        <!-- 메인 상단 -->
         <div class="main_top">
           <div class="main_top_layout">
-            <a href="">
-              <!-- 카테고리  -->
+            <button type="button" class="category_openBtn" id="OpenBtn">
+              <!-- 모달창 띄우는 버튼  -->
               <img
-                src="/images/mypage/Category.png"
-                alt=""
-                class="main_top_category"
+                      th:src="@{/images/book/category.png}"
+                      alt=""
+                      class="main_top_category"
               />
-            </a>
+            </button>
             <div class="main_top_category_tap">
               <ul class="main_top_category_list">
-                <li>
-                  <a href="">내 서재</a>
+                <li class="main_top_category_list2">
+                  <a th:href="@{/mypage/int}" class="main_top_category_list_title">내 서재</a>
                   <!-- 내 서재 이동 -->
                 </li>
-                <li>
-                  <a href="">쪽지</a>
+                <li class="main_top_category_list2">
+                  <a th:href="@{/message/letter/get}" class="main_top_category_list_title">쪽지</a>
                   <!-- 쪽지 이동 -->
                 </li>
-                <li>
-                  <a href="">검색</a>
-                  <!-- 검색 이동 -->
+                <li class="main_top_category_list2">
+                  <a th:href="@{/search}" class="main_top_category_list_title">검색</a>
+
+                <li class="main_top_category_list2">
+                  <a href="" class="main_top_category_list_title">이벤트</a>
+                  <!-- 이벤트 이동 -->
                 </li>
+
+                <li class="main_top_category_list2">
+                  <a th:href="@{/categorie/Categoriepage}" class="main_top_category_list_title">카테고리</a>
+                </li>
+
               </ul>
             </div>
           </div>
         </div>
+
       </main>
     </form>
 
-    <div class="letter-middle-line"></div>
+
     <form action="">
       <div class="letter-cate">
         <div class="letter-cate-box">
@@ -68,6 +79,57 @@
       <button type="button" class="letter-reply">답장하기</button>
       <button type="button" class="letter-back">뒤로가기</button>
     </div>
+    <!--카테고리 모달창-->
+    <div class="category_popup" id="category_wrap">
+      <div class="category_popup_inner">
+        <section class="category_popup_inner_layout">
+          <section class="category_popup_content_layout">
+            <a th:href="@{/board/post/main}">
+              <span class="category_popup_title">게시판</span>
+            </a>
+
+            <div class="category_popup_content_box">
+              <span class="category_popup_content">소설 게시판</span>
+              <span class="category_popup_content">중고 게시판</span>
+              <span class="category_popup_content">자유 게시판</span>
+            </div>
+
+            <span class="category_popup_title">쪽지</span>
+            <div class="category_popup_content_box">
+              <a th:href="@{/message/letter/get}">
+                <span class="category_popup_content">받은 쪽지함</span>
+              </a>
+              <a th:href="@{/message/letter/send}">
+                <span class="category_popup_content">보낸 쪽지함</span>
+              </a>
+            </div>
+
+
+            <a th:href="@{/feed}">
+              <span class="category_popup_title">피드</span>
+            </a>
+
+            <div class="category_popup_content_box">
+              <a th:href="@{/feed}">
+                <span class="category_popup_content">포스트</span>
+              </a>
+              <a th:href="@{/feed/oneline}">
+                <span class="category_popup_content">한 줄 리뷰</span>
+              </a>
+              <a th:href="@{/feed/read}">
+                <span class="category_popup_content">독후감</span>
+              </a>
+            </div>
+
+            <span class="category_popup_title">이벤트</span>
+            <a th:href="@{/mypage/sticker}">
+              <span class="category_popup_content">스티커 신청하기</span>
+            </a>
+          </section>
+        </section>
+      </div>
+    </div>
+
     <footer>
       <div></div>
     </footer>
