--- a/src/main/resources/templates/mypage/myPageBookContainer.html
+++ b/src/main/resources/templates/mypage/myPageBookContainer.html
@@ -6,6 +6,7 @@
     <title>Document</title>
     <link rel="stylesheet" th:href="@{/css/mypage/myPageBookContainer.css}">
     <link rel="stylesheet" th:href="@{/css/main/mainpage.css}" />
+    <script defer th:src="@{/js/main/mainpage.js}"></script>
     <script type="module" defer th:src="@{/js/mypage/bookContainer.js}"></script>
 </head>
 <body>
@@ -63,7 +64,13 @@
             </div>
 
             <div id="profile-name">
-                <h3 th:text="*{userNickName}"></h3>
+                <span>
+                  <th:block>
+                  <img class="hippo-celeb" th:if="${checkSticker == 'Y'}"
+                       th:src="@{/images/mypage/hippo.png}" alt=""/>
+                  </th:block>
+                </span>
+                <h3 class="mypage-user-nickname" th:text="*{userNickName}"></h3>
                 <span class="profile-name-option">님의 서재</span>
             </div>
             <div id="follow">
@@ -96,10 +103,10 @@
                     <span>총 </span><span th:text="${#lists.size(bookContainerList)}"></span><span>권</span>
                 </div>
                 <div class="book-Container-cate-list">
-                    <span>담은날짜 순</span>
-                    <div class="book-Container-cate-list-setting">
-                        <img src="/images/mypage/up-arrow.png" alt="" id="list-setting-image">
-                    </div>
+<!--                    <span>담은날짜 순</span>-->
+<!--                    <div class="book-Container-cate-list-setting">-->
+<!--                        <img src="/images/mypage/up-arrow.png" alt="" id="list-setting-image">-->
+<!--                    </div>-->
                 </div>
             </div>
         </section>
@@ -176,6 +183,57 @@
     </div>
 
 </section>
+</div>
+<!--카테고리 모달창-->
+    <div class="category_popup" id="category_wrap">
+        <div class="category_popup_inner">
+            <section class="category_popup_inner_layout">
+                <section class="category_popup_content_layout">
+                    <a th:href="@{/board/post/main}">
+                        <span class="category_popup_title">게시판</span>
+                    </a>
+
+                    <div class="category_popup_content_box">
+                        <span class="category_popup_content">소설 게시판</span>
+                        <span class="category_popup_content">중고 게시판</span>
+                        <span class="category_popup_content">자유 게시판</span>
+                    </div>
+
+                    <span class="category_popup_title">쪽지</span>
+                    <div class="category_popup_content_box">
+                        <a th:href="@{/message/letter/get}">
+                            <span class="category_popup_content">받은 쪽지함</span>
+                        </a>
+                        <a th:href="@{/message/letter/send}">
+                            <span class="category_popup_content">보낸 쪽지함</span>
+                        </a>
+                    </div>
+
+
+                    <a th:href="@{/feed}">
+                        <span class="category_popup_title">피드</span>
+                    </a>
+
+                    <div class="category_popup_content_box">
+                        <a th:href="@{/feed}">
+                            <span class="category_popup_content">포스트</span>
+                        </a>
+                        <a th:href="@{/feed/oneline}">
+                            <span class="category_popup_content">한 줄 리뷰</span>
+                        </a>
+                        <a th:href="@{/feed/read}">
+                            <span class="category_popup_content">독후감</span>
+                        </a>
+                    </div>
+
+                    <span class="category_popup_title">이벤트</span>
+                    <a th:href="@{/mypage/sticker}">
+                        <span class="category_popup_content">스티커 신청하기</span>
+                    </a>
+                </section>
+            </section>
+        </div>
+    </div>
 
 </body>
 </html>
