--- a/src/main/resources/templates/book/book_info_page.html
+++ b/src/main/resources/templates/book/book_info_page.html
@@ -10,29 +10,30 @@
   </head>
   <body>
   <header class="header" th:replace="~{/fragment/header :: header}"></header>
-    <input type="hidden" class="book-info-hidden" th:data-bookid="${bookId}">
+    <input type="hidden" class="book-info-hidden" th:data-bookid="${bookInfo.bookId}"
+    th:data-uid="${session.userId}">
     <div class="main__outer_container">
       <main class="main__inner_container">
         <section class="main__book-preview-info-box">
           <div class="main__book-cover-box">
-            <img th:src="@{/imgs/administrator/fragment/test_book_cover.webp}" alt="" />
+            <img th:src="@{${bookInfo.cover}}" alt="" />
           </div>
           <div class="main__book-related-info-box">
             <div class="book-simple-info">
-              <p class="book-title">별에서의 살인</p>
-              <p class="book-author">모모노 지파</p>
+              <p class="book-title" th:text="${bookInfo.bookName}">별에서의 살인</p>
+              <p class="book-author" th:text="${bookInfo.bookWriter}">모모노 지파</p>
             </div>
             <div class="book-reference-data-box">
               <div>
                 <p>이 책이 담긴 서재</p>
-                <strong>1579개</strong>
+                <strong><span th:text="${bookInfo.bookHasCnt}">1579</span>개</strong>
               </div>
               <div>
                 <p>한 줄 리뷰</p>
                 <strong>6개</strong>
               </div>
               <div>
-                <p>책 담기</p>
+                <p th:if="${bookHas == 0}">책 담기</p>
               </div>
             </div>
           </div>
@@ -41,7 +42,8 @@
           <div class="main__book-short-content-box">
             <div>
               <h3>책소개</h3>
-              <p>
+              <p th:if="${bookInfo.description == null}" >해당 정보가 업데이트되지 않았습니다.</p>
+              <p th:unless="${bookInfo.description == null}" th:text="${bookInfo.description}">
                 무중력 공간에서 발견된 목매단 시체 <br />
                 전대미문의 우주 밀실 사건 발생!<br /><br />
                 에도가와 란포 상을 수상한 천재적 신인 작가가 선보이는<br />
@@ -68,14 +70,14 @@
                 마지막 페이지를 닫으며 장대한 규모의 스토리와 스마트한 트릭이
                 선사하는 전율에 몸서리칠 것이다.<br />
               </p>
-              <div class="book-more-btn"><button>펼치기</button></div>
+<!--              <div class="book-more-btn"><button>펼치기</button></div>-->
             </div>
             <div class="main__book-detail-content-box">
               <ul>
-                <li><span>카테고리</span><strong>추리</strong></li>
+                <li><span>카테고리</span><strong th:text="${bookInfo.category}">추리</strong></li>
 <!--                <li><span>페이지</span><strong>400p</strong></li>-->
-                <li><span>출판사</span><strong>모모</strong></li>
-                <li><span>출간일</span><strong>2024.04.24</strong></li>
+                <li><span>출판사</span><strong th:text="${bookInfo.pubName}">모모</strong></li>
+                <li><span>출간일</span><strong th:text="${bookInfo.bookDate}">2024.04.24</strong></li>
               </ul>
             </div>
 <!--            <div class="main__book-other-descri-box">-->
@@ -132,6 +134,9 @@
 <!--              </div>-->
             </li>
           </ul>
+          <div class="more-comment-btn">
+            <span>더보기</span>
+          </div>
           <div class="main__book-comment-write-container">
             <form action="" class="book-comment-form">
               <div class="main__book-comment-write-area">
@@ -139,109 +144,109 @@
                   <span>한 줄 리뷰</span>
                   <textarea
                     name=""
-                    id=""
+                    id="book-comment-input"
                     placeholder="리뷰을 남겨보세요!"
-                    maxlength="50"
+                    maxlength="60"
                     rows="1"
                   ></textarea>
                 </label>
               </div>
-              <button>등록</button>
+              <button type="button" id="book-comment-btn">등록</button>
             </form>
           </div>
         </section>
       </main>
     </div>
-    <div class="modal-decl-req-back">
-      <div class="modal-decl-req-box">
-        <h2>신고하기</h2>
-        <div class="modal-decl-opt-content-box">
-          <input type="hidden" data-reasonnow="-1" />
-          <label>
-            <input
-              type="radio"
-              name="decl_reason"
-              data-reasonnow="1"
-              value="단순 비방, 욕설 등 불쾌감을 주는 내용"
-            />
-            <div class="modal-decl-reason-box">
-              <p>단순 비방, 욕설 등 불쾌감을 주는 내용</p>
-              <span></span>
-            </div>
-          </label>
-          <label>
-            <input
-              type="radio"
-              name="decl_reason"
-              data-reasonnow="2"
-              value="음란성 또는 청소년에게 부적합"
-            />
-            <div class="modal-decl-reason-box">
-              <p>음란성 또는 청소년에게 부적합</p>
-              <span></span>
-            </div>
-          </label>
-          <label>
-            <input
-              type="radio"
-              name="decl_reason"
-              data-reasonnow="3"
-              value="주제와 관련 없거나 부적절한 홍보"
-            />
-            <div class="modal-decl-reason-box">
-              <p>주제와 관련 없거나 부적절한 홍보</p>
-              <span></span>
-            </div>
-          </label>
-          <label>
-            <input
-              type="radio"
-              name="decl_reason"
-              data-reasonnow="4"
-              value="스포일러가 포함된 내용"
-            />
-            <div class="modal-decl-reason-box">
-              <p>스포일러가 포함된 내용</p>
-              <span></span>
-            </div>
-          </label>
-          <label>
-            <input
-              type="radio"
-              name="decl_reason"
-              data-reasonnow="5"
-              id="decl-reason"
-              value=""
-            />
-            <div class="modal-decl-reason-box">
-              <p>기타</p>
-              <span></span>
-            </div>
-          </label>
-          <div class="decl-reason-other-box-outer">
-            <label class="decl-reason-other-box">
-              <div class="decl-other-content-box">
-                <span>신고사유*</span>
-                <input
-                  type="text"
-                  placeholder="신고사유를 작성하세요"
-                  maxlength="50"
-                  class="other-reason"
-                />
-              </div>
-              <div class="decl-other-text-delete">
-                <button type="button"></button>
-              </div>
-            </label>
+  <div class="modal-decl-req-back">
+    <div class="modal-decl-req-box">
+      <h2>신고하기</h2>
+      <div class="modal-decl-opt-content-box">
+        <input type="hidden" data-reasonnow="-1"/>
+        <label>
+          <input
+                  type="radio"
+                  name="decl_reason"
+                  data-reasonnow="1"
+                  value="단순 비방, 욕설 등 불쾌감을 주는 내용"
+          />
+          <div class="modal-decl-reason-box">
+            <p>단순 비방, 욕설 등 불쾌감을 주는 내용</p>
+            <span></span>
           </div>
-        </div>
-        <p>신고 사유를 선택 후 신고해주세요</p>
-        <div class="modal-decl-btn-box">
-          <button type="button" class="decl-close-btn">취소</button>
-          <button type="button" class="decl-process-btn">신고</button>
+        </label>
+        <label>
+          <input
+                  type="radio"
+                  name="decl_reason"
+                  data-reasonnow="2"
+                  value="음란성 또는 청소년에게 부적합"
+          />
+          <div class="modal-decl-reason-box">
+            <p>음란성 또는 청소년에게 부적합</p>
+            <span></span>
+          </div>
+        </label>
+        <label>
+          <input
+                  type="radio"
+                  name="decl_reason"
+                  data-reasonnow="3"
+                  value="주제와 관련 없거나 부적절한 홍보"
+          />
+          <div class="modal-decl-reason-box">
+            <p>주제와 관련 없거나 부적절한 홍보</p>
+            <span></span>
+          </div>
+        </label>
+        <label>
+          <input
+                  type="radio"
+                  name="decl_reason"
+                  data-reasonnow="4"
+                  value="스포일러가 포함된 내용"
+          />
+          <div class="modal-decl-reason-box">
+            <p>스포일러가 포함된 내용</p>
+            <span></span>
+          </div>
+        </label>
+        <label>
+          <input
+                  type="radio"
+                  name="decl_reason"
+                  data-reasonnow="5"
+                  id="decl-reason"
+                  value=""
+          />
+          <div class="modal-decl-reason-box">
+            <p>기타</p>
+            <span></span>
+          </div>
+        </label>
+        <div class="decl-reason-other-box-outer">
+          <label class="decl-reason-other-box">
+            <div class="decl-other-content-box">
+              <span>신고사유*</span>
+              <input
+                      type="text"
+                      placeholder="신고사유를 작성하세요"
+                      maxlength="50"
+                      class="other-reason"
+              />
+            </div>
+            <div class="decl-other-text-delete">
+              <button type="button"></button>
+            </div>
+          </label>
         </div>
       </div>
+      <p>신고 사유를 선택 후 신고해주세요</p>
+      <div class="modal-decl-btn-box">
+        <button type="button" class="decl-close-btn">취소</button>
+        <button type="button" class="decl-process-btn">신고</button>
+      </div>
     </div>
+  </div>
     <footer></footer>
   </body>
 </html>
